# cmon-frontend

./: .gitignore  CMakeLists.txt  alarms_controller.go  auth_controller.go  build.sh  clustercontrol.go  cmon_controller.go  config.go  gulpfile.js  helpers.go  index_controller.go  install.sh  package.json  websocket_controller.go
etc/: clustercontrol.cnf  my.cnf
etc/systemd/: clustercontrol.service
src/: cc.module.js
src/auth/: auth.config.js  auth.module.js  auth.run.js
src/auth/login/: login.component.js  login.controller.js  login.html  login.module.js
src/common/: common.module.js
src/common/auth/: auth.module.js  auth.service.js
src/common/rpc/: rpc.module.js  rpc.service.js
src/main/: main.config.js  main.constant.js  main.models.js  main.module.js  main.run.js  main.scss
src/main/alarms/: alarms.models.js  alarms.module.js  alarms.service.js
src/main/chart/: chart.component.js  chart.scss
src/main/clusters/: clusters.models.js  clusters.module.js  clusters.service.js
src/main/clusters/clusterDetails/: clusterDetails.component.js  clusterDetails.html
src/main/clusters/hostDetails/: hostDetails.component.js  hostDetails.html
src/main/clusters/hostTag/: hostTag.component.js  hostTag.html
src/main/dashboard/: dashboard.component.js  dashboard.html  dashboard.scss
src/main/nav/: nav.component.js  nav.html  nav.scss
src/main/stats/: stats.module.js  stats.service.js
src/main/users/: users.models.js  users.module.js
src/main/websocket/: websocket.service.js
src/templates/: auth.html  main.html
